# easymcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish-npm.yml  publish-pypi.yml
npm-wrapper/: package.json
skills/cairn/: SKILL.md
src/cairn/: __init__.py  cli.py  prompts.py  scaffold.py  template_engine.py  validators.py
src/easymcp/: __init__.py  cli.py  prompts.py  scaffold.py  template_engine.py
templates/api-integration/common/: .env.example.j2  README.md.j2
templates/api-integration/nodejs/: package.json.j2
templates/api-integration/nodejs/src/: connector.js.j2  mcp-server.js.j2
templates/api-integration/python/: pyproject.toml.j2
templates/api-integration/python/src/__package_name__/: connector.py.j2  mcp_server.py.j2
templates/common/: .gitignore.j2  LICENSE.j2  README.md.j2  install-__project_slug__.j2
templates/doc-search/common/: .env.example.j2  install-__project_slug__.j2  install-__project_slug__.ps1.j2  installer.py.j2
templates/doc-search/nodejs/: package.json.j2
templates/doc-search/nodejs/src/: ingest.js.j2  mcp-server.js.j2  source-registry.js.j2
templates/doc-search/python/: pyproject.toml.j2
templates/doc-search/python/src/__package_name__/: __init__.py.j2  mcp_server.py.j2  server.py.j2  source_registry.py.j2
templates/nodejs/: package.json.j2
templates/nodejs/src/: server.js.j2
templates/python/src/__package_name__/: ingest.py.j2  mcp_server.py.j2
templates/starter/common/: README.md.j2
templates/starter/nodejs/: package.json.j2
templates/starter/nodejs/src/: mcp-server.js.j2
templates/starter/python/: pyproject.toml.j2
templates/starter/python/src/__package_name__/: mcp_server.py.j2
