[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairn-mcp"
version = "0.3.0"
description = "CAIRN — Create Any Integration, Run Naturally. Scaffold production-ready MCP servers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Percona", email = "info@percona.com" },
]
keywords = ["mcp", "model-context-protocol", "scaffolding", "cli", "ai-tools", "cairn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.scripts]
cairn = "cairn.cli:main"

[project.urls]
Homepage = "https://github.com/Percona-Lab/CAIRN"
Repository = "https://github.com/Percona-Lab/CAIRN"
Issues = "https://github.com/Percona-Lab/CAIRN/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "cairn/templates"

[tool.hatch.build.targets.sdist]
include = ["src/cairn", "templates", "README.md", "LICENSE"]
